--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>el buda profano | sushi vegano | Arequipa Peru</title>
-  <meta name="description" content="Unique and Innovative | Vegan Sushi">
+  <meta name="description" content="Unique and Innovative Cuisine | Vegan Sushi">
   <meta name="author" content="el buda profano">
 
   <!-- Mobile Specific Metas
