--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 
-  <!-- Primary Page Layout
+  <!-- Primary Page Layout  #66CDAA
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
@@ -41,16 +41,93 @@
         <p class="u-pull-right" ><a target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru</a></p>
       </div>
     </div>
-<!--
+  <!-- Team header row -->
     <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
+      <div class="six columns" style="margin-top: 25%">
         <h4>the Team </h4>
-        <p class="u-pull-left">Alan Pater <br> CA, CEO, CFO, CIO, MOZO</p>
-        <p class="u-pull-right">... fui lavaplatos en restaurantes, <br>tome curso en ingles, <br>now I'm a dishwasher!</p>
       </div>
     </div>
--->
 
+  <!-- Team 1st row -->
+    <div class="row">
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Alan </p>
+        <p class="u-pull-right">... fui lavaplatos en restaurantes, <br>tome curso en ingles, <br>now I'm a dishwasher!
+								<br><br> conceptualizer, architect, dishwasher</p>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Jerenie <br></p>
+        <p class="u-pull-right"><br>personnel picker extraordinaire  
+								<br><br> right hand </p>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Anatole </p>
+        <p class="u-pull-right">not Cholo de verdad, resident artist
+								<br><br> Chef, team lead </p>
+      </div>
+    </div>
+
+  <!-- Team 2nd row -->
+    <div class="row">
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Jaime </p>
+        <p class="u-pull-right">production king, el mudo 
+								<br><br> Line cook, Prep cook, Waiter </p>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Alex </p>
+        <p class="u-pull-right">aka '9 finger' 
+								<br><br> Line cook, Prep cook, Waiter </p>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Astrid </p>
+        <p class="u-pull-right">Grumpy Sushi Girl 
+								<br><br> Line cook, Prep cook, Waiter </p>
+      </div>
+    </div>
+
+  <!-- Team 3rd row -->
+    <div class="row">
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Miguel </p>
+        <p class="u-pull-right">  
+								<br><br> Line cook, Prep cook, Waiter </p>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">You! </p>
+        <p class="u-pull-right">  
+								<br><br> Line cook, Prep cook, Waiter </p>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">You! </p>
+        <p class="u-pull-right">  
+								<br><br> Line cook, Prep cook, Waiter </p>
+      </div>
+    </div>
+
+  <!-- Footer row -->
+    <div class="row">
+      <div class="twelve columns" style="margin-top: 5%">
+        <p style="text-align:center;"> 
+			<a target="_blank" style="margin-right:16px;" href="https://www.facebook.com/elbudaprofano/">facebook</a> 
+			<a target="_blank" style="margin-right:16px;" href="https://twitter.com/elBudaProfano">twitter</a> 
+			<a target="_blank" style="margin-right:16px;" href="https://www.instagram.com/elbudaprofano/">instagram</a> 
+			<a target="_blank" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor</a> 
+			<a target="_blank" style="margin-right:16px;" href="https://www.happycow.net/reviews/el-buda-profano-arequipa-64990">happy cow</a> 
+		</p>
+      </div>
+    </div>
+
+<p class="u-cf"></p>
   </div>
 
 <!-- End Document
