--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>el buda profano | sushi vegano | Arequipa Peru</title>
-  <meta name="description" content="Unique and Innovative Cuisine | Vegan Sushi">
+  <title>el buda profano | vegan sushi | Arequipa Peru</title>
+  <meta name="description" content="Unique and Innovative Vegan Cuisine">
   <meta name="author" content="el buda profano">
 
   <!-- Mobile Specific Metas
@@ -37,7 +37,7 @@
       <div class="one-half column" style="margin-top: 25%">
         <h4>disruptive innovation </h4>
         <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi <a target="_blank" href="https://www.facebook.com/elbudaprofano/menu">menu</a> has been designed by Master Chef Jimbo Echevarría to surprise and delight the senses.</p>
-<!--         <p class="u-pull-left" ><br><br>the Team</p>  -->
+         <p class="u-pull-left" ><br><br>open daily: 4 p.m. to 10 p.m.</p>  
         <p class="u-pull-right" ><a target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru</a></p>
       </div>
     </div>
