--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         <h4>disruptive innovation </h4>
         <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi <a target="_blank" href="https://www.facebook.com/elbudaprofano/menu">menu</a> has been designed by Master Chef Jimbo Echevarría to surprise and delight the senses.</p>
          <p class="u-pull-left" ><br><br>open daily: 4 p.m. to 10 p.m.<br>no reservations<br>cash only</p>  
-        <p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br><a target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">view map</a></p>
+        <p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br><a class="button" target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">view map</a></p>
       </div>
     </div>
 
   <!-- sample dishes row -->
     <div class="row">
       <div class="six columns" style="margin-top: 25%">
-        <h5>some sample dishes</h5>
-        prices in Peruvian Soles
+        <h5>combos and platters</h5>
+        <p class="u-pull-right">prices in Peruvian Soles</p>
       </div>
     </div>
 
@@ -65,14 +65,15 @@
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">9 piece gunkanmaki | S/15</p>
-        <p class="u-pull-right">a selection of our gunkanmaki flavours</p>
+        <p class="u-pull-right">a fine selection of gunkanmaki</p>
       </div>
     </div>
 
   <!-- Team header row -->
     <div class="row">
       <div class="six columns" style="margin-top: 5%">
-        <h4>the Team </h4>
+        <h4>the Team</h4>
+		<a class="button" style="float: right" href="mailto:buda.profano@gmail.com">Join us!</a>
       </div>
     </div>
 
@@ -146,12 +147,12 @@
     <div class="row">
       <div class="twelve columns" style="margin-top: 5%">
         <p style="text-align:center;"> 
-			<a target="_blank" style="margin-right:16px;" href="mailto:buda.profano@gmail.com">email</a>
-			<a target="_blank" style="margin-right:16px;" href="https://www.facebook.com/elbudaprofano/">facebook</a> 
-			<a target="_blank" style="margin-right:16px;" href="https://twitter.com/elBudaProfano">twitter</a> 
-			<a target="_blank" style="margin-right:16px;" href="https://www.instagram.com/elbudaprofano/">instagram</a> 
-			<a target="_blank" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor</a> 
-			<a target="_blank" style="margin-right:16px;" href="https://www.happycow.net/reviews/el-buda-profano-arequipa-64990">happy cow</a> 
+			<a class="button" style="margin-right:16px;" href="mailto:buda.profano@gmail.com">email</a>
+			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.facebook.com/elbudaprofano/">facebook</a> 
+			<a target="_blank" class="button" style="margin-right:16px;" href="https://twitter.com/elBudaProfano">twitter</a> 
+			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.instagram.com/elbudaprofano/">instagram</a> 
+			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor</a> 
+			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.happycow.net/reviews/el-buda-profano-arequipa-64990">happy cow</a> 
 		</p>
       </div>
     </div>
