--- a/index.html
+++ b/index.html
@@ -34,11 +34,14 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="one-half column" style="margin-top: 20%">
-        <h4>disruptive innovation </h4>
-        <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi <a target="_blank" href="https://www.facebook.com/elbudaprofano/menu">menu</a> has been designed by Master Chef Jimbo Echevarría to surprise and delight the senses.</p>
-         <p class="u-pull-left" ><br><br>open daily: 4 p.m. to 10 p.m.<br>no reservations<br>cash only</p>  
-        <p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br><a class="button" target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">view map</a></p>
+      <div class="one-half column" style="margin-top: 15%">
+        <h5>surprise and delight the senses</h5>
+        <p>Raved about by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi <a target="_blank" href="https://www.facebook.com/elbudaprofano/menu">menu</a> has been designed by Master Chef Jimbo Echevarría to thrill and captivate.</p>
+         <p class="u-pull-left" >open daily: 4 p.m. to 10 p.m.<br>no reservations<br>cash only<br><br>  
+			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor reviews</a> </p>
+        <p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br>
+			<a class="button" target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">view map</a>
+		</p>
       </div>
     </div>
 
