--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <meta name="description" content="Unique and Innovative Vegan Cuisine">
   <meta name="author" content="el buda profano">
 
+  <meta name="keywords" content="vegan,cuisine,sushi,restaurant,sake,wine,bar,arequipa,peru">
+
+  <link rel="canonical" href="http://elbudaprofano.com" />
+
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,7 +40,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 15%">
         <h5>surprise and delight the senses</h5>
-        <p>Raved about by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi <a target="_blank" href="https://www.facebook.com/elbudaprofano/menu">menu</a> has been designed by Master Chef Jimbo Echevarría to thrill and captivate.</p>
+        <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi menu has been designed by Master Chef Jimbo Echevarría to thrill and captivate.</p>
          <p class="u-pull-left" >open daily: 4 p.m. to 10 p.m.<br>no reservations<br>cash only<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor reviews</a> </p>
         <p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br>
@@ -49,7 +53,7 @@
     <div class="row">
       <div class="six columns" style="margin-top: 25%">
         <h5>combos and platters</h5>
-        <p class="u-pull-right">prices in Peruvian Soles</p>
+        <p class="u-pull-right">prices in Peruvian Soles<br>Our complete 100% vegan menu <a target="_blank" href="https://www.facebook.com/elbudaprofano/menu">here</a>.</p>
       </div>
     </div>
 
@@ -72,6 +76,25 @@
       </div>
     </div>
 
+  <!-- Dishes 2nd row -->
+    <div class="row">
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Saké and sushi | S/69</p>
+        <p class="u-pull-right">Selection of makis with 2 gō saké</p>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Wine by the bottle | S/48</p>
+        <p class="u-pull-right">featuring fine Peruvian whites and reds</p>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Oriental highland Ceviche | S/11</p>
+        <p class="u-pull-right">Our acclaimed vegan cebiche!</p>
+      </div>
+    </div>
+
   <!-- Team header row -->
     <div class="row">
       <div class="six columns" style="margin-top: 5%">
@@ -85,8 +108,8 @@
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Alan </p>
-        <p class="u-pull-right">... fui lavaplatos en restaurantes, <br>tome curso en ingles, <br>now I'm a dishwasher!
-								<br><br> conceptualizer, architect, dishwasher</p>
+        <p class="u-pull-right">conceptualizer, architect, dishwasher
+								<br><br>... fui lavaplatos en restaurantes, <br>tome curso en ingles, <br>now I'm a dishwasher!</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
@@ -97,7 +120,7 @@
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Anatole </p>
-        <p class="u-pull-right">not Cholo de verdad, resident artist
+        <p class="u-pull-right">resident artist
 								<br><br> Chef, team lead </p>
       </div>
     </div>
@@ -107,7 +130,7 @@
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Jaime </p>
-        <p class="u-pull-right">production king, el mudo 
+        <p class="u-pull-right">production king 
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
   <!-- -->
@@ -119,7 +142,7 @@
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Astrid </p>
-        <p class="u-pull-right">Grumpy Sushi Girl 
+        <p class="u-pull-right">Sushi Girl 
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
     </div>
