--- a/index.html
+++ b/index.html
@@ -95,6 +95,36 @@
       </div>
     </div>
 
+  <!-- Mentions header row -->
+    <div class="row">
+      <div class="six columns" style="margin-top: 5%">
+        <h4>Fame and fortune</h4>
+      </div>
+    </div>
+
+  <!-- Mentions 1st row -->
+    <div class="row">
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Photos from our lovely customers!</p>
+        <a target="_blank" class="button" style="float: right" 
+			href="https://www.instagram.com/explore/locations/1024032139/">Instagrams</a>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">A vegan oasis in Arequipa: El Buda Profano</p>
+        <a target="_blank" class="button" style="float: right" 
+			href="http://theveganglobetrotter.com/en/vegan-oasis-arequipa-el-buda-profano/">The Vegan Globetrotter</a>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">¿Sushi sin pescado? La opción de Sushi Vegano, la tiene ElBudaProfano, 
+								un restaurante muy innovador en Arequipa Perú</p>
+        <a target="_blank" class="button" style="float: right" 
+			href="https://plus.google.com/u/0/+RyuhikaiRHK/posts/DCr2u51aPcB?sfc=true">RyûHiKai blog</a>
+      </div>
+    </div>
+
   <!-- Team header row -->
     <div class="row">
       <div class="six columns" style="margin-top: 5%">
