ryuhikai.com new link

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <p class="u-pull-left">¿Sushi sin pescado? La opción de Sushi Vegano, la tiene ElBudaProfano, 
 								un restaurante muy innovador en Arequipa Perú</p>
         <a target="_blank" class="button" style="float: right" 
-			href="https://plus.google.com/u/0/+RyuhikaiRHK/posts/DCr2u51aPcB?sfc=true">RyûHiKai blog</a>
+			href="http://www.ryuhikai.com/sushi-sin-pescado-buda-profano/">RyûHiKai blog</a>
       </div>
     </div>
 
