--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Jerenie <br></p>
         <p class="u-pull-right"><br>personnel picker extraordinaire  
-								<br><br> right hand </p>
+								<br><br> hr </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
@@ -159,26 +159,10 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Jaime </p>
-        <p class="u-pull-right">production king 
-								<br><br> Line cook, Prep cook, Waiter </p>
-      </div>
-  <!-- -->
-      <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Alex </p>
         <p class="u-pull-right">aka '9 finger' 
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
-  <!-- -->
-      <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Astrid </p>
-        <p class="u-pull-right">Sushi Girl 
-								<br><br> Line cook, Prep cook, Waiter </p>
-      </div>
-    </div>
-
-  <!-- Team 3rd row -->
-    <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Miguel </p>
@@ -187,14 +171,30 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Claudia </p>
+        <p class="u-pull-right">  
+								<br><br> Line cook, Prep cook, Waiter </p>
+      </div>
+    </div>
+
+  <!-- Team 3rd row -->
+    <div class="row">
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">You! </p>
         <p class="u-pull-right">  
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">You! </p>
-        <p class="u-pull-right">  
+        <p class="u-pull-left">Jaime </p>
+        <p class="u-pull-right">production king 
+								<br><br> Line cook, Prep cook, Waiter </p>
+      </div>
+  <!-- -->
+      <div class="one-third column" style="margin-top: 2%">
+        <p class="u-pull-left">Astrid </p>
+        <p class="u-pull-right">Sushi Girl 
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
     </div>
