--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="row">
       <div class="six columns" style="margin-top: 25%">
         <h5>combos and platters</h5>
-        <p class="u-pull-right">prices in Peruvian Soles<br>Our complete 100% vegan menu <a target="_blank" href="https://www.facebook.com/elbudaprofano/menu">here</a>.</p>
+        <p class="u-pull-right">prices in Peruvian Soles<br>Our complete 100% vegan menu <a target="_blank" href="images/menu.jpg">here</a>.</p>
       </div>
     </div>
 
