hours, new combos

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="one-half column" style="margin-top: 15%">
         <h5>surprise and delight the senses</h5>
         <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi menu has been designed by Master Chef Jimbo Echevarría to thrill and captivate.</p>
-         <p class="u-pull-left" >open daily: 4 p.m. to 10 p.m.<br>no reservations<br>cash only<br><br>  
+         <p class="u-pull-left" >open daily: 1 p.m. to 9 p.m.<br>no reservations<br>cash only<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor reviews</a> </p>
         <p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br>
 			<a class="button" target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">view map</a>
@@ -61,17 +61,17 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Chef Selection | S/29</p>
+        <p class="u-pull-left">Chef Selection | S/32</p>
         <p class="u-pull-right">24 piece sushi platter</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Tasting menu | S/37</p>
-        <p class="u-pull-right">Ceviche, gyoza, nigiri, and buda maki</p>
+        <p class="u-pull-left">35 piece sampler | S/45</p>
+        <p class="u-pull-right">Nigiri, gunkan, hosmaki, futomaki and uramaki</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">9 piece gunkanmaki | S/15</p>
+        <p class="u-pull-left">10 piece gunkanmaki | S/18</p>
         <p class="u-pull-right">a fine selection of gunkanmaki</p>
       </div>
     </div>
@@ -80,8 +80,8 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Saké and sushi | S/69</p>
-        <p class="u-pull-right">Selection of makis with 2 gō saké</p>
+        <p class="u-pull-left">Sweet afternoon | S/25</p>
+        <p class="u-pull-right">Saké and your choice of our desert makis</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
@@ -90,8 +90,8 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Oriental highland Ceviche | S/11</p>
-        <p class="u-pull-right">Our acclaimed vegan cebiche!</p>
+        <p class="u-pull-left">Fresh combo | S/14</p>
+        <p class="u-pull-right">Fresh juice, Sunomono salad and Futomaki verde</p>
       </div>
     </div>
 
@@ -165,39 +165,19 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Miguel </p>
-        <p class="u-pull-right">  
-								<br><br> Line cook, Prep cook, Waiter </p>
-      </div>
-  <!-- -->
-      <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Claudia </p>
-        <p class="u-pull-right">  
-								<br><br> Line cook, Prep cook, Waiter </p>
-      </div>
-    </div>
-
-  <!-- Team 3rd row -->
-    <div class="row">
-  <!-- -->
-      <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">You! </p>
         <p class="u-pull-right">  
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Jaime </p>
-        <p class="u-pull-right">production king 
-								<br><br> Line cook, Prep cook, Waiter </p>
-      </div>
-  <!-- -->
-      <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Astrid </p>
-        <p class="u-pull-right">Sushi Girl 
+        <p class="u-pull-left">Claudia  </p>
+        <p class="u-pull-right">  
 								<br><br> Line cook, Prep cook, Waiter </p>
       </div>
     </div>
+
+
 
   <!-- Footer row -->
     <div class="row">
