--- a/index.html
+++ b/index.html
@@ -42,10 +42,14 @@
         <h5>surprise and delight the senses</h5>
         <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi menu has been designed by Master Chef Jimbo Echevarría to thrill and captivate.</p>
          <p class="u-pull-left" >open daily: 1 p.m. to 9 p.m.<br>no reservations<br>cash only<br><br>  
-			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor reviews</a> </p>
-        <p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br>
+			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor reviews</a>
+		 </p>
+      	<p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br>
 			<a class="button" target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">view map</a>
 		</p>
+  <!-- holiday hours row -->
+         <p class="u-pull-left" >holiday hours | Friday December 23: 1 p.m. to 9 p.m. | Saturday December 24: 1 p.m. to 9 p.m. | Sunday December 25: 1 p.m. to 9 p.m. | Monday December 26: 1 p.m. to 9 p.m.
+		 </p>
       </div>
     </div>
 
