--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">35 piece sampler | S/45</p>
+        <p class="u-pull-left">Sampler | S/37</p>
         <p class="u-pull-right">Nigiri, gunkan, hosmaki, futomaki and uramaki</p>
       </div>
   <!-- -->
@@ -89,8 +89,8 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Wine by the bottle | S/48</p>
-        <p class="u-pull-right">featuring fine Peruvian whites and reds</p>
+        <p class="u-pull-left">Wine by the bottle | S/36</p>
+        <p class="u-pull-right">special offer until January 1, 2017</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
