--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<a class="button" target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">view map</a>
 		</p>
   <!-- holiday hours row -->
-         <p class="u-pull-left" >holiday hours | Saturday December 24: 1 p.m. to 9 p.m. | Sunday December 25: 1 p.m. to 9 p.m. | Monday December 26: 1 p.m. to 9 p.m.
+         <p class="u-pull-left" >holiday hours | Sunday December 25: 1 p.m. to 9 p.m. 
 		 </p>
       </div>
     </div>
