--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
       	<p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br>
 			<a class="button" target="_blank" href="https://www.google.com/maps/place/el+buda+profano/@-16.393733,-71.5391587,17z/data=!3m1!4b1!4m5!3m4!1s0x91424a5aa7ada247:0x23198b1936176450!8m2!3d-16.393733!4d-71.53697">view map</a>
 		</p>
-  <!-- holiday hours row -->
-         <p class="u-pull-left" >holiday hours | Sunday January 1: 1 p.m. to 9 p.m. 
-		 </p>
       </div>
     </div>
 
@@ -89,8 +86,8 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Wine by the bottle | S/36</p>
-        <p class="u-pull-right">special offer until January 1, 2017</p>
+        <p class="u-pull-left">Wine by the bottle | S/48</p>
+        <p class="u-pull-right">White, red or sparkling</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
