--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="row">
       <div class="six columns" style="margin-top: 25%">
         <h5>combos and platters</h5>
-        <p class="u-pull-right">prices in Peruvian Soles<br>Our complete 100% vegan menu <a target="_blank" href="images/menu.jpg">here</a>.</p>
+        <p class="u-pull-right">prices in Peruvian Soles<br>Our 100% vegan menu <a target="_blank" href="images/menu.jpg">is here</a>.</p>
       </div>
     </div>
 
@@ -67,8 +67,8 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Sampler | S/37</p>
-        <p class="u-pull-right">Nigiri, gunkan, hosmaki, futomaki and uramaki</p>
+        <p class="u-pull-left">Tasting menu for 2 | S/40</p>
+        <p class="u-pull-right">Miso, sunomono, nigirizushi, gunkanmaki, hosomaki, futomaki and uramaki</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
@@ -81,18 +81,18 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Sweet afternoon | S/25</p>
+        <p class="u-pull-left">Sweet afternoon | S/22</p>
         <p class="u-pull-right">Saké and your choice of our desert makis</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Wine by the bottle | S/48</p>
+        <p class="u-pull-left">Wine by the bottle | S/38</p>
         <p class="u-pull-right">White, red or sparkling</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
         <p class="u-pull-left">Fresh combo | S/14</p>
-        <p class="u-pull-right">Fresh juice, Sunomono salad and Futomaki verde</p>
+        <p class="u-pull-right">Fresh juice, Sunomono salad and Futomaki</p>
       </div>
     </div>
 
