--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="row">
       <div class="six columns" style="margin-top: 25%">
         <h5>combos and platters</h5>
-        <p class="u-pull-right">prices in Peruvian Soles<br>Our 100% vegan menu <a target="_blank" href="images/menu.jpg">is here</a>.</p>
+        <p class="u-pull-right">prices in Peruvian Soles<br>Our 100% vegan menu <a target="_blank" href="images/menu-1.jpg">is here</a>.</p>
       </div>
     </div>
 
@@ -62,13 +62,13 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Chef Selection | S/32</p>
+        <p class="u-pull-left">Chef Selection | S/35</p>
         <p class="u-pull-right">24 piece sushi platter</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Tasting menu for 2 | S/40</p>
-        <p class="u-pull-right">Miso, sunomono, nigirizushi, gunkanmaki, hosomaki, futomaki and uramaki</p>
+        <p class="u-pull-left">Tasting menu for 2 | S/38</p>
+        <p class="u-pull-right">Miso, nigirizushi, gunkanmaki, hosomaki, futomaki and uramaki</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
@@ -81,20 +81,21 @@
     <div class="row">
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Sweet afternoon | S/22</p>
+        <p class="u-pull-left">Sweet afternoon | S/28</p>
         <p class="u-pull-right">Saké and your choice of our desert makis</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Wine by the bottle | S/38</p>
+        <p class="u-pull-left">Wine by the bottle | S/55</p>
         <p class="u-pull-right">White, red or sparkling</p>
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Fresh combo | S/14</p>
+        <p class="u-pull-left">Fresh combo | S/16</p>
         <p class="u-pull-right">Fresh juice, Sunomono salad and Futomaki</p>
       </div>
     </div>
+
 
   <!-- Mentions header row -->
     <div class="row">
@@ -150,8 +151,8 @@
       </div>
   <!-- -->
       <div class="one-third column" style="margin-top: 2%">
-        <p class="u-pull-left">Anatole </p>
-        <p class="u-pull-right">resident artist
+        <p class="u-pull-left">  </p>
+        <p class="u-pull-right"> We are hiring!
 								<br><br> Chef, team lead </p>
       </div>
     </div>
