--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="one-half column" style="margin-top: 15%">
         <h5>surprise and delight the senses</h5>
         <p>Enjoyed by vegans, vegetarians, pescetarians and carnivores alike, our vegan sushi menu has been designed by Master Chef Jimbo Echevarría to thrill and captivate.</p>
-         <p class="u-pull-left" >open daily: 1 p.m. to 9 p.m.<br>no reservations<br>cash only<br><br>  
+         <p class="u-pull-left" >open thursday through monday: 6 p.m. to 10 p.m.<br>no reservations<br>cash only<br><br>  
 			<a target="_blank" class="button" style="margin-right:16px;" href="https://www.tripadvisor.com/Restaurant_Review-g294313-d9564741-Reviews-El_Buda_Profano-Arequipa_Arequipa_Region.html">tripadvisor reviews</a>
 		 </p>
       	<p class="u-pull-right" >el buda profano  <br> calle Bolivar 425  <br> Arequipa, Peru<br><br>
