--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="one-half column" style="margin-top: 15%">
+      <div class="one-half column" style="margin-top: 10%">
         <h5>sorprender y deleitar los sentidos</h5>
 
 
@@ -54,7 +54,7 @@
 
   <!-- sample dishes row -->
     <div class="row">
-      <div class="six columns" style="margin-top: 25%">
+      <div class="six columns" style="margin-top: 10%">
         <h5>combos y tablas</h5>
         <p class="u-pull-right">precios en Soles<br>La carta 100% vegana <a target="_blank" href="images/carta-1.jpg"> esta aqui</a>.</p>
       </div>
@@ -102,7 +102,7 @@
   <!-- Mentions header row -->
     <div class="row">
       <div class="six columns" style="margin-top: 5%">
-        <h4>Fama</h4>
+        <h4>la fama</h4>
       </div>
     </div>
 
